# ConcurrentHTTP

./: .gitignore  CMakeLists.txt  README.md
libraries/minhook/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  minhook.sln  minhook.vcxproj  minhook.vcxproj.filters
libraries/yasio/: byte_buffer.hpp  config.hpp  endian_portable.hpp  ibstream.hpp  io_service.cpp  io_service.hpp  io_watcher.hpp  logging.hpp  memory.hpp  object_pool.hpp  object_pool_alloc.hpp  obstream.hpp  ref_ptr.hpp  shared_mutex.hpp  singleton.hpp  ssl.hpp  strfmt.hpp  string_view.hpp  utils.hpp  xxsocket.cpp  xxsocket.hpp  yasio.hpp  yasio_fwd.hpp
libraries/yasio/impl/: ares.hpp  concurrent_queue.hpp  epoll_io_watcher.hpp  eventfd_select_interrupter.hpp  evport_io_watcher.hpp  fp16.hpp  ifaddrs.hpp  kqueue_io_watcher.hpp  openssl.hpp  pipe_select_interrupter.hpp  poll_io_watcher.hpp  select_interrupter.hpp  select_io_watcher.hpp  socket.hpp  socket_select_interrupter.hpp
src/: HttpClientH.h  Macros.h  dllmain.cpp  includes.h
src/base/: AutoreleasePool.cpp  AutoreleasePool.h  CArray.cpp  CArray.h  ConcurrentDeque.h  Config.h  Director.cpp  Director.h  Macros.h  Ref.cpp  Ref.h  RefPtr.h  Scheduler.cpp  Scheduler.h  Utils.cpp  Utils.h  base64.cpp  base64.h
src/network/: HttpClient.cpp  HttpClient.h  HttpRequest.h  HttpResponse.h  Uri.cpp  Uri.h
src/platform/: PlatformMacros.h
